--- a/kanyequest.html
+++ b/kanyequest.html
@@ -46,8 +46,6 @@
     </div>
   </body>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9XsXbshpqrs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-</iframe>
 <h2> Title: Kanye Quest Trailer (WIP) </h2>
 <h2> Medium: TvPaint, Adobe Animate, Adobe Premiere, Adobe Photoshop, Adobe After Effects</h2>
 <h2> Dimensions: 1920x1080p </h2>
@@ -55,9 +53,9 @@
 <body>
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </iframe>
-<img src="images/allegory final.png" alt="visual">
-<img src="images/beat board final.jpg" alt="beat board">
-<img src="images/shot37bgrd.jpg" alt="background">
+<img src="images/allegory final.png" alt="visual"height="50%">
+<img src="images/beat board final.jpg" alt="beat board" height="50%">
+<img src="images/shot37bgrd.jpg" alt="background" height="50%">
 
     
     <p>
