--- a/kanyequest.html
+++ b/kanyequest.html
@@ -53,9 +53,9 @@
 <body>
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </iframe>
-<img src="images/allegory final.png" alt="visual"height="50%">
-<img src="images/beat board final.jpg" alt="beat board" height="50%">
-<img src="images/shot37bgrd.jpg" alt="background" height="50%">
+<img src="images/allegory final.png" alt="visual" width="1300px" height="296px">
+<img src="images/beat board final.jpg" alt="beat board" width="3000px" height="2200px">
+<img src="images/shot37bgrd.jpg" alt="background">
 
     
     <p>
