--- a/cloudy.html
+++ b/cloudy.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
-    <title> Glitch Art </title>
+    <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -39,11 +35,10 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Stay Home (Demo)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
@@ -51,12 +46,9 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-<h2> 
-  <img src="/images/cloudy404.jpg" alt="cloud404"> 
-</h2>
-<h3>Glitch Art</h3>
-      <p>"My "happy place" is above the clouds, and that imagery inspired this artwork. I had an image that I took from a flight of fluffy white clouds surrounded by a blue sky.
-        Then I took the miage to audacity and played with the different settings that would be applied to sound. I was also inspired by vaporwave art that I find on social media.
-        It gives an avant-garde aesthetic and grabs the viewer's eyes from the colors."</p>
+<h2>Title: Cloud404</h2>
+<h2>Medium: Audacity, Adobe photoshop</h2>
+<h2>Dimensions: 750 × 1334px</h2>
+      <p>One of the prompts for Art74 taught me how to create glitch art, which stems from the Dada art movement and is characterized with avant-garde aesthetics and ironic humor. This aesthetic became popular as of recent years and has influenced newer genre across the internet such as “vaporwave” and “nostalgiacore”. I took the original photo looking out of an airplane window overlooking a sea of clouds, then I corrupted the file by importing the image file into the audio program Audacity. Corrupting the image file resulted in disrupting the imagery with streaks of color to create an artificial skyline. Existing among big white fluffy clouds is how I would envision my happy place, and distoring the nature of the setting alludes to a disruption to my peace of mind. While the fluffy serenity provided comfort, the artifical nature suggest changes or feelings of anxiety. </p>
 
 </html>
