--- a/3dmashup.html
+++ b/3dmashup.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -26,6 +22,7 @@ body {
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
+
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -38,11 +35,10 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Stay Home (Demo)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
@@ -50,11 +46,6 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-
-<body>
-    <h1> 3d Mashup </h1>
-<p> This artwork was inspired by my late grandfather and aesthetics from a song associated with remembering loved ones who have passed. The color and vibrancy of the flowers contrast the monochrome zebra and checkerboard. The butterfly wings suggest the zebra’s relationship support in helping the flowers grow.
-</p>
 <div class="sketchfab-embed-wrapper">
     <iframe title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/90062cb57edf4d9e99ef49bdd22271e0/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
@@ -62,7 +53,19 @@ body {
     <a href="https://sketchfab.com/3d-models/sophias-3d-mashup-90062cb57edf4d9e99ef49bdd22271e0?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sophia&#39;s 3d mashup</a>
     by <a href="https://sketchfab.com/sophiaymartinez?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sophia</a>
     on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+  </p>
+<img src="images/3dmashup.png" alt="3dmashup">
+      <h2>Title:Unordinary Life </h2>
+
+<h2>Medium: Maya </h2>
+
+<h2>Dimensions: 1920x1080p </h2>
+<p> Title: Colorful Life
+Medium: Maya, Meshmixer
+Using free 3D models from Sketchfab, I created this 3D mashup scene in Maya and added color in Meshmixer. This scene is inspired by my late grandfather and the visual elements are inspired from a song associated with remembering loved ones who have passed. While the monochrome elements represent the unordinary and abstract, the colorful elements represent beauty and a short existence. The vibrancy of the flowers contrast the monochrome zebra and checkerboard, yet aesthetically compliment one another and create a balance suggesting both elements cannot exist without the other. 
+
 </p>
+
 
 </div>
 
