--- a/kanyequest.html
+++ b/kanyequest.html
@@ -53,8 +53,8 @@
 <body>
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </iframe>
-<img src="images/allegory final.png" alt="visual" width="1300px" height="296px">
-<img src="images/beat board final.jpg" alt="beat board" width="3000px" height="2200px">
+<img src="images/allegory final.png" alt="visual" width="1300" height="296">
+<img src="images/beat board final.jpg" alt="beat board" width="3000" height="2200">
 <img src="images/shot37bgrd.jpg" alt="background">
 
     
