--- a/invclk.html
+++ b/invclk.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -39,27 +35,28 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">DIY Fountain of Youth</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
   </body>
-  <!--end of Nav bar-->
+
+<h2> Title: DIY Fountain of Youth </h2>
+<h2> Medium: Adobe Photoshop</h2>
+<h2> Dimensions: 1990 × 1740p </h2>
 
 <body>
 
+<img src="images/Fairy fountain.png" alt="concept">
 
-  <img src="Invisi-cloak.png" style="width:40%">
-     <h3>Invisi-cloak</h3>
-     <p>
-       "The name of the assignment that prompted this piece was called  “Art as Activists”. This piece was inspired by the feminist values and social justice issues related to the #MeToo movement.
-       Women are expected to dress a certain way to prevent unwanted attention in the patriarchal society of the United States. However at the same time there are women who fully cover themselves and prove that a woman’s choice of clothing has no impact on the actions of sexual assailants."
+    
+    <p>
+       Visualization for a project in Art 3: This “DIY” project requires the participant’s full use of imagination and curiosity. Early on in grade school I played too many video games, but little did I know that sparked my treasure sensing ability! I would pick up things that caught my eye and bring them home. Fast forward to last month when I was looking through my childhood storage and realized I collected glittery crayon shavings, unidentifiable garbage, and pieces of broken glass. However holding those ingredients in my hand reminded me of what I was thinking at the time and what I associated those objects with as a child. With that same energy, the participant can engage in this activity in almost any location, for instance if they’re walking home or in a forest. Gathering one of any element will meditate mindfulness of the present moment, and whatever element they gather naturally draws that person to choose it. Once the participant has their small brew, then they are invited to meditate on what they have collected and ask themselves open questions such as “what brought me to choosing this individual item?”, and after feeling any positive emotions: “why can’t I feel this way more often?”. Contemplation can last for as long as the participant desires to, and this DIY Fountain of Youth has no limits.
      </p>
 
 
