--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ img {
           <div class="gallery-item">
           <div class="image">
            <a target="_blank"
-           href="invclk.html">
-            <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
+           href="potions.html">
+            <img src="images/Fairy fountain.png" alt="Potions">
             </a>
           </div>
           </div>
