--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ img {
           <div class="image">
            <a target="_blank"
            href="potions.html">
-            <img src="images/Fairy fountain.png" alt="Potions">
+            <img src="images/Fairy_fountain.png" alt="Potions">
             </a>
           </div>
           </div>
