--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@ img {
             </div>
           </div>
 
+        <div class="gallery-container">
+          <div class="gallery-item">
+            <div class="image">
+          <a target="_blank"
+          href="3dmashup.html">
+              <img src="images/3dmashup.png" alt="3dmashup">
+          </a>
+            </div>
+            </div>
+          </div>
 
         <div class="gallery-container">
           <div class="gallery-item">
@@ -148,45 +158,14 @@ img {
         <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
-          <a target="_blank"
-          href="3dmashup.html">
-              <img src="images/3dmashup.png" alt="3dmashup">
-          </a>
-            </div>
-            </div>
-          </div>
-
-        <div class="gallery-container">
-          <div class="gallery-item">
-            <div class="image">
           <a target="_blank" 
            href="pastel.html">
-            <img src="images/pastel.jpg" alt="pastel">
+            <img src="images/Filipinwho.png" alt="pastel">
           </a>
 		        </div>
             </div>
           </div>
 
-		    <div class="gallery-container">
-          <div class="gallery-item">
-            <div class="image">
-          <a target="_blank" href="paintings.html">
-            <img src="images/painting3.png" alt="neon">
-          </a>
-		        </div>
-            </div>
-          </div>
-
-          <div class="gallery-container">
-          <div class="gallery-item">
-            <div class="image">
-          <a target="_blank"
-          href="tweet.html">
-            <img src="images/tweet.gif" alt="tweet">
-          </a> 
-            </div>
-            </div>
-          </div>
 	</div>
 </body>
 	
