--- a/pastel.html
+++ b/pastel.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!--Navigation bar-->
+<head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f0f0f0;
-  font-family: arial;
-}
-.content {
+
+   .content {
   max-width: 500px;
   margin: auto;
-  padding: 5px;
+  background: #f5f5f5;
+  padding: 10px;
 }
-  
+    
 .glow {
   font-size: 40px;
   color: #fff;
@@ -38,12 +35,10 @@ body {
 </style>
   </head>
   <body>
-  <div class="content">
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Filipinwho</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
@@ -51,11 +46,16 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
+<img src="images/Filipinwho.png" alt="comic">
+<h2>Title:Filipinwho </h2>
 
-<h3>Pastel Portrait</h3>
-      <img src="images/pastel.jpg" alt="pastel">
-      <p>11/18/19, Chalk Pastel
-"This self portrait was a final for one of the last art classes I took at De-Anza. I attempted to capture my golden undertones of my skin and referenced a selfie I took. 
-        In this piece I challenged myself to render the skin tone as accurately as I could because coloring is not my strength."
+<h2>Medium: Adobe Photoshop </h2>
+
+<h2>Dimensions:2160 × 1080px </h2>
+
+      
+      <p>
+This comic is part of a collective I worked on to open the conversation on the experiences for BIPOC (Black, Indigenous, People of color). It encourages diversity and representation for BIPOC in all forms of media because in my childhood I consumed a lot of media and cartoons where I felt like I would be categorized as “other” or “supporting cast”. The dialogue for this comic was inspired by a personal experience that happened to me in elementary school. My 2nd grade class would hold a small “show-and-tell” event to celebrate cultural diversity and one day the Philippines was introduced. That day I learned about my cultural heritage and it invited me to contemplate more on my identity as an Asian American female and question why I never “saw” Filipinos or more diverse Asian representation in American media.
+
       </p>
 </html>
