--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ img {
           <div class="image">
            <a target="_blank"
            href="potions.html">
-            <img src="images/Fairy_fountain.png" alt="Potions">
+            <img src="images/fairyfountain.png" alt="Potions">
             </a>
           </div>
           </div>
