--- a/potions.html
+++ b/potions.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">DIY Fountain of Youth</h1>
+<h1 class="glow">DIY Potion</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
@@ -46,13 +46,13 @@
     </div>
   </body>
 
-<h2> Title:Potions</h2>
+<h2> Title:DIY Potion</h2>
 <h2> Medium: Adobe Photoshop</h2>
 <h2> Dimensions: 1990 × 1740p </h2>
 
 <body>
 
-<img src="images/Fairy fountain.png" alt="ingredients">
+<img src="images/fairyfountain.png" alt="ingredients" width="1550"; height="1310">
 
     
     <p>
