looked at each page

--- a/cloudy.html
+++ b/cloudy.html
@@ -46,6 +46,7 @@
     </div>
   </body>
   <!--end of Nav bar-->
+  <img src="images/cloudy404.jpg" alt="glitch">
 <h2>Title: Cloud404</h2>
 <h2>Medium: Audacity, Adobe photoshop</h2>
 <h2>Dimensions: 750 × 1334px</h2>
