--- a/kanyequest.html
+++ b/kanyequest.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Kanye Quest</h1>
+<h1 class="glow">Video & Animation</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
@@ -54,7 +54,7 @@
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </iframe>
 <img src="images/allegory final.png" alt="visual" width="1300" height="1296">
-<img src="images/beat board final.jpg" alt="beat board" width="2000" height="1200">
+<img src="images/beat board final.jpg" alt="beat board" width="1800" height="1000">
 
     
     <p>
