--- a/pastel.html
+++ b/pastel.html
@@ -46,7 +46,7 @@
     </div>
   </body>
   <!--end of Nav bar-->
-<img src="images/Filipinwho.png" alt="comic">
+<img src="images/Filipinwho.png" alt="comic" width="1080"; height="540"; >
 <h2>Title:Filipinwho </h2>
 
 <h2>Medium: Adobe Photoshop </h2>
