--- a/rottenpumpkin.html
+++ b/rottenpumpkin.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Rotten Pumpkin</h1>
+<h1 class="glow">code</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
@@ -48,7 +48,7 @@
   <!--end of Nav bar-->
 <a target="_blank"
             href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:1314px; height:800px;">
+              <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:1314px; height:800px;">
           </a>
 <h2>Title: Rotten Pumpkin Website </h2>
 <h2>Medium: html5, css </h2>
