we're 90% of the way!

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ body {
     <div class="w3-center w3-white w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="images/bealright.png" class="w3-margin w3-circle" alt="mystyle" style="width:50%">
+      <img src="images/_MG_9599.jpg" class="w3-margin w3-circle" alt="mystyle" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network. I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64!
         I would like to consider myself a digitally literate person who can surf the web and keep
