--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ img {
 <body>
 <div class="header">
   <h2>Artwork</h2>
-  <p> My work composed of animations,  digital media pieces from De Anza, Foothill, and San José State </p>
+  <p> My work composed of animations and digital media pieces during my first year at San José State University and my time studying animation at De Anza College</p>
 </div>
 <!-- portfolio grid -->
 
