--- a/3dmashup.html
+++ b/3dmashup.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Stay Home (Demo)</h1>
+<h1 class="glow">3D Model</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
