--- a/potions.html
+++ b/potions.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">DIY Potion</h1>
+<h1 class="glow">Photoshop Illustration</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
