--- a/workfromhome.html
+++ b/workfromhome.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Work As Usual (2021)</h1>
+<h1 class="glow"> Animation </h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
