--- a/about.html
+++ b/about.html
@@ -60,34 +60,12 @@ body {
   </body>
   <!--end of Nav bar-->
     
-    <div class="w3-center w3-white w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
-      <h1>About Me</h1>
-      <img src="images/_MG_9599.jpg" class="w3-margin w3-circle" alt="mystyle" style="width:50%">
+      <h1>Artist Statement</h1>
+      <img src="images/issame.jpg" alt="mystyle">
       <div class="w3-left-align w3-padding-large">
-        <p>My name is Sophia, I am born and raised in the South Bay area of California. Animation and illustration has been my passion since I was in elementary school. My artwork is heavily inspired by the pop culture I absorbed from my childhood growing up watching anime and Cartoon Network. I also find aesthetic inspiration from the low-poly nostalgic look of games from the Nintendo 64!
-        I would like to consider myself a digitally literate person who can surf the web and keep
-up with the mainstream of internet culture and technology. Yet growing up on the internet did
-not prepare me for the art of creating digital media art or coding. Over this past semester I
-worked on expanding my knowledge in CSS and html, experimenting with videography through
-Adobe PremierePro and After Effects.
-I learned that coding is not as simple as it appears to be. The process is more extensive
-than copying and pasting, especially when I had a particular design in mind, which is why I feel
-comfortable finding inspiration and capturing small details. In Quar-ad-venture ( 2020) and
-Stay Home (Demo) (2020), the narratives and aesthetic choices were inspired by online web
-comics and video games from the late 90s/early 2000s. I want to pay homage to these interests
-that paved the way for technological and pop cultural development. Both of these works emulate
-adventures that fantasize normal life pre-COVID19, a lifestyle that realistically reflected my own.
-I was not interested in doing high-energy activities in the first place, now limited shopping and
-simply existing outside are adventures unfamiliar for me. One of the early projects I worked on,
-Transience: Capturing the Subtle Things in Life (2020), is reminiscent of the simplicity from
-Quar-ad-venture (2020) and Stay Home (Demo) (2020) in the way that the footage is taken
-from a transient and observational perspective. The colors chosen for the filters convey a playful
-and somewhat nostalgic feeling.
-My belief that my journey as an artist branches out and has the bandwidth to roll back
-into being inspired by the past. I enjoy timelessness, and seeing how technology and pop
-culture evolve along my journey. </p>
-	      <p> Email- sophiaymartinez@gmail.com </p>     
+        <p>I hope you have enjoyed checking out my portfolio! My name is Sophia Martinez, and I am a second generation Filipino-American. I was born and raised in the South Bay Area of California, and I tend to draw inspiration from my cultural background and nostalgia as an individual born too late into the Millennial generation but too old for Generation Z. However I believe that gave people around my age the sweet spot for growing up with cool groundbreaking technology and cartoons! My artwork is inspired by the past and explores themes of timelessness. Citypop Escape and Cloud404 are examples of my understanding and aesthetic appreciation for retro and nostalgic palettes of color. The nostalgiacore aesthetic celebrates achieved internet history and is similar to another aesthetic known as kidcore, which focuses on bright colors and nostalgia from the 90s. Potions and Rotten Pumpkin are influenced by these aesthetics as they revisit activities I would do as a kid such as browsing the internet and playing pretend. I grew up watching whatever was on Cartoon Network, which at that time was rich with a variety of iconic animation such as the Powerpuff Girls and Sailor Moon. Despite the positive representation of empowering female figures, I did not truly feel represented as a Southeast Asian American child. The comic Filipinwho serves as a visual for the emotions I felt as a child trying to form an identity. Even though I personally did not know other people who shared the same family experiences that I had, and did not feel fully represented by the characters I enjoyed in the media I consumed. </p>
+<p>For many Asian Americans, growing up consuming Japanese pop culture through video games and anime before the 2010s was the most entertaining and dominating form of Asian representation in American media. As a result of consuming Japanese pop culture at a young age, I consider myself among many young Asian American artists that show an influence of the anime art style. In Flow, the videography and visuals are inspired by action lines and movement that I would see from my favorite action anime and video games. Kanye Quest and Stay Home (Demo) are heavily inspired by video games that I have played, however I wish to continue expanding my knowledge on video editing and one day learn more about video game development. After I graduated high school in Spring 2015 I knew I wanted to enter a career path that would allow me to be creative, so I attended Foothill college and De Anza to budget my time and save money before attending university. Both community colleges had strong curriculum for art majors along with teaching me valuable skills such as strongly participating in art critiques and organizing for a project.I transferred to San José State with basic knowledge of animation under my belt and determination to challenge myself in familiarizing with digital media and focus on understanding the language of code. During my first fall semester in 2019 my mother got married and unfortunately my grandfather passed away in the same season. I was emotionally overwhelmed and so it took a toll on my mental health during my first year as a Spartan. Colorful Life was a personal piece I created during the fall 2019 in memory of my grandfather, and that moment of my life helped me grow closer to my identity and taught me about mindfulness. Enduring 2020 exercised patience and challenged motivation as I quit my part-time job in order to fully focus on graduating and moving forward. That being said I believe it is important for me to grow past my comfort zone in illustration and concept art by entering the DMA program. Work As Usual is a more recent animation I created that reflects the stuck-at-home culture and best represents my current skills in 2D animation. My strong suits in the Adobe suits are through Photoshop and Premiere, however I wish to challenge myself by learning more data visualization and familiarize myself with more industry-standard tools. </p>
 	    </div>
 		    </div>
 </html>
