--- a/about.html
+++ b/about.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="style.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
 <style>
 body  {
   background-image: url("images/cloudsdrift.gif");
-  background-color:  #f2f2f2;
+  background-color:  #aab4cd;
 }
 </style>
-  </head>
+
 <!--Navigation bar-->
-<head>
+
     <title> Sophia Martinez </title>
 <style>
 body {
@@ -20,7 +20,7 @@ body {
   font-family: arial;
 }
 .content {
-  max-width: 500px;
+  max-width: 1000px;
   margin: auto;
   padding: 5px;
 }
