changed paragraphs into h1

--- a/3dmashup.html
+++ b/3dmashup.html
@@ -59,11 +59,11 @@
 <h2>Medium: Maya </h2>
 
 <h2>Dimensions: 1920x1080p </h2>
-<p> Title: Colorful Life
+<h1> Title: Colorful Life
 Medium: Maya, Meshmixer
 Using free 3D models from Sketchfab, I created this 3D mashup scene in Maya and added color in Meshmixer. This scene is inspired by my late grandfather and the visual elements are inspired from a song associated with remembering loved ones who have passed. While the monochrome elements represent the unordinary and abstract, the colorful elements represent beauty and a short existence. The vibrancy of the flowers contrast the monochrome zebra and checkerboard, yet aesthetically compliment one another and create a balance suggesting both elements cannot exist without the other. 
 
-</p>
+</h1>
  <img src="images/3dmashup.png" alt="3dmashup">
 
 </div>
