--- a/3dmashup.html
+++ b/3dmashup.html
@@ -54,16 +54,14 @@
     by <a href="https://sketchfab.com/sophiaymartinez?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sophia</a>
     on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
   </p>
-      <h2>Title:Unordinary Life </h2>
-
-<h2>Medium: Maya </h2>
-
+  <h2> Title: Colorful Life</h2>
+<h2>Medium: Maya Meshmixer </h2>
 <h2>Dimensions: 1920x1080p </h2>
-<h1> Title: Colorful Life
-Medium: Maya, Meshmixer
+
+<p>
 Using free 3D models from Sketchfab, I created this 3D mashup scene in Maya and added color in Meshmixer. This scene is inspired by my late grandfather and the visual elements are inspired from a song associated with remembering loved ones who have passed. While the monochrome elements represent the unordinary and abstract, the colorful elements represent beauty and a short existence. The vibrancy of the flowers contrast the monochrome zebra and checkerboard, yet aesthetically compliment one another and create a balance suggesting both elements cannot exist without the other. 
 
-</h1>
+</p>
  <img src="images/3dmashup.png" alt="3dmashup">
 
 </div>
