--- a/Flow.html
+++ b/Flow.html
@@ -52,8 +52,8 @@
 <h2> Medium: iPhone XR, Adobe After Effects</h2>
 <h2> Dimensions: 1920x1080p </h2>
 
-<h1>
-Before I transferred to San José State I attended animation classes at DeAnza College to prepare for the animation program. In this project I learned stop motion animation and used a flexible ball-joint figurine to capture the movement. In Art 74 the assignment was to create an augmented reality (AR) graphic, and I found inspiration from edits of dance videos on Youtube. This project allowed me to try Adobe After Effects, which allowed me to draw on the video and create the visual effects seen in the video. I enjoyed drawing the suggestion of movement and imagining the energy through the animation! </h1>
+<p>
+Before I transferred to San José State I attended animation classes at DeAnza College to prepare for the animation program. In this project I learned stop motion animation and used a flexible ball-joint figurine to capture the movement. In Art 74 the assignment was to create an augmented reality (AR) graphic, and I found inspiration from edits of dance videos on Youtube. This project allowed me to try Adobe After Effects, which allowed me to draw on the video and create the visual effects seen in the video. I enjoyed drawing the suggestion of movement and imagining the energy through the animation! </p>
 
 </body>
 </html>
