--- a/StayHome.html
+++ b/StayHome.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Code</h1>
+<h1 class="glow">Video Editing</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
@@ -54,7 +54,7 @@
 
 <h2>Dimensions: 1920x1080p </h2>
 
-<p> I wanted to apply the video editing knowledge I've learned throughout the semester to create this video of what would be a demo for a video game! It's quarantine-themed but I also understand that theme is running dry and I would have to make it more interesting somehow. I tried this adventure game concept in my previous project and wanted to expand on it! The music comes from old classic video games that I grew up playing, and the graphics are inspired by video games for the Nintendo Gameboy.
+<p> I wanted to apply the video editing knowledge I've learned throughout the Spring 2020 semester to create this video of what would be a demo for a video game. I tried this adventure game concept in my previous project and wanted to expand on it. The music comes from old classic video games that I grew up playing, and the graphics are inspired by video games for the Nintendo Gameboy. The on-screen graphics were created in Photoshop, and the video edited in Premiere.
 I alternated between using my Canon EOS DSLR and my iphone to record the video to broaden my range of quality. Using the DSLR I wanted more depth of field and different colors that I feel would be flat on iphone. Adding the video footage together in premiere was fun and I enjoyed filming and acting for this project!</p>
 
 </html>
