--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@ body  {
   background-image: url("images/cloudsdrift.gif");
   background-color:  #aab4cd;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 </style>
 
 <!--Navigation bar-->
