--- a/cloudy.html
+++ b/cloudy.html
@@ -6,7 +6,10 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-
+  
+img {
+  float: right;
+}
    .content {
   max-width: 500px;
   margin: auto;
