text goes to side!
maybe tehre is no body whateverrrr

--- a/citypopescape.html
+++ b/citypopescape.html
@@ -7,7 +7,9 @@
     <title> Citypop Escape </title>
   </head>
 <style>
-
+img {
+  float: right;
+}
    .content {
   max-width: 500px;
   margin: auto;
