--- a/pastel.html
+++ b/pastel.html
@@ -6,7 +6,9 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-
+img {
+  float: right;
+}
    .content {
   max-width: 500px;
   margin: auto;
@@ -34,7 +36,7 @@
 }
 </style>
   </head>
-  <body>
+
 <h1 class="glow">Photoshop Illustration</h1>
     <div class="navbar">
       <ul class="navlist">
@@ -44,7 +46,7 @@
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
-  </body> 
+
   <!--end of Nav bar-->
 <img src="images/Filipinwho.png" alt="comic" width="1080"; height="540"; >
 <h2>Title:Filipinwho </h2>
