--- a/rottenpumpkin.html
+++ b/rottenpumpkin.html
@@ -6,7 +6,9 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-
+img {
+  float: right;
+}
    .content {
   max-width: 500px;
   margin: auto;
