--- a/workfromhome.html
+++ b/workfromhome.html
@@ -6,7 +6,9 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-
+iframe {
+  float: left;
+}
    .content {
   max-width: 500px;
   margin: auto;
