--- a/rottenpumpkin.html
+++ b/rottenpumpkin.html
@@ -7,7 +7,7 @@
     <title> Sophia Martinez </title>
 <style>
 img {
-  float: right;
+  float: left;
 }
    .content {
   max-width: 500px;
@@ -51,7 +51,7 @@ img {
   <!--end of Nav bar-->
 <a target="_blank"
             href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:900px; height:550px;">
+              <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:800px; height:450px;">
           </a>
 <h2>Title: Rotten Pumpkin Website </h2>
 <h2>Medium: html5, css </h2>
