--- a/StayHome.html
+++ b/StayHome.html
@@ -7,7 +7,7 @@
     <title> Sophia Martinez </title>
 <style>
 
-img {
+iframe {
   float: left;
 }
    .content {
@@ -50,7 +50,7 @@ img {
   </body>
   <!--end of Nav bar-->
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/naxPA6aSIr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="760" height="515" src="https://www.youtube.com/embed/naxPA6aSIr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h2>Title: Stay Home (Demo)</h2>
 
 <h2>Medium: Premiere Pro, Photoshop, DSLR Camera, iPhoneXR</h2>
