--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ div {
   background-color: white;
   width: 800px;
   padding: auto;
-  margin: auto;
+  margin: 10px;
 }
 .content {
   max-width: 800px;
