--- a/checkmate.html
+++ b/checkmate.html
@@ -15,7 +15,7 @@ img {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -29,14 +29,14 @@ img {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
 </style>
   </head>
-  
+
 </body>
 <h1 class="glow">code</h1>
     <div class="navbar">
@@ -50,16 +50,17 @@ img {
 
   <!--end of Nav bar-->
 <a target="_blank"
-            href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:800px; height:450px;">
+            href="https://symartinez21.itch.io/checkmate-the-dating-sim">
+              <img src="images/checkmate.png" alt="dating sim" style="width:800px; height:450px;">
           </a>
-<h2>Title: Rotten Pumpkin Website </h2>
-<h2>Medium: html5, css </h2>
-<h2>Year: 2019</h2>
-<p> 
-In Art74 we learned the basics towards building websites! As a 3rd grader in elementary school before the start of social media, a friend introduced me to a website builder. I remember obsessively looking for ways to decorate my page using codes designated for myspace and embeding flash games to share with my friends. Using elements such as custom cursors and decorative sprite gifs inspired the aesthetic behind the website. Halloween was an upcoming holiday around the production of this website which is why it is Halloween themed, and creating a parody of the website Rotten Tomatoes inspired the purpose for Rotten Pumpkin! Users would rate their favorite Halloween-themed movies using the rating widget and are encouraged leave reviews.
+<h2>Title: CHECKMATE!! The Dating Sim </h2>
+<h2>Medium: javascript, renpy, photoshop </h2>
+<h2>Year: 2022</h2>
+<p>
+A video game passion project reflecting my sense of humor. This project was my first time coding with javascript as the engine renpy utilizes that language. <br>
+I illustrated all the outfits on the chess piece characters and the background assets in Adobe Photoshop. 
 </p>
 
 
-  
+
 </html>
