--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ img {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -58,14 +58,14 @@ img {
         <div class= "gallery-container">
           <div class="gallery-item">
             <div class="image">
-              <a target="_blank"  
+              <a target="_blank"
                href="StayHome.html">
               <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
               </a>
             </div>
-            </div> 
+            </div>
           </div>
-     
+
 <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
@@ -79,10 +79,10 @@ img {
 
         <div class="gallery-container">
           <div class="gallery-item">
-            <div class="image">   
+            <div class="image">
           <a target= "_blank"
-          href="rottenpumpkin.html">
-            <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin">
+          href="checkmate.html">
+            <img src="images/checkmate.png" alt="dating sim">
           </a>
             </div>
             </div>
@@ -109,7 +109,7 @@ img {
             </div>
             </div>
           </div>
-        
+
 
         <div class="gallery-container">
           <div class="gallery-item">
@@ -158,7 +158,7 @@ img {
         <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
-          <a target="_blank" 
+          <a target="_blank"
            href="pastel.html">
             <img src="images/Filipinwho.png" alt="pastel">
           </a>
@@ -168,5 +168,5 @@ img {
 
 	</div>
 </body>
-	
+
 </html>
