changed another sketch

--- a/p5js.html
+++ b/p5js.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="citypop.css">
+    <link rel="stylesheet" type= "text/css" href="p5js.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Citypop Escape </title>
+    <title> P5js sketch </title>
   </head>
 <style>
 iframe {
@@ -16,7 +16,7 @@ iframe {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -30,7 +30,7 @@ iframe {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -50,15 +50,16 @@ iframe {
       </ul>
     </div>
   </body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6nxHOiSv7Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h2> Title: "CityPop Escape" </h2>
+<iframe style="width: 400px; height: 400px; overflow: hidden;"  scrolling="no" frameborder="0" src="https://editor.p5js.org/Symartinez21/full/Xxx_KSu6m"></iframe>
+    <h2> Title: "P5js No Ice" </h2>
     <h2> Medium: Processing 3 </h2>
-    <h2> Dimensions: 900 x 850p </h2>
+    <h2> Dimensions: 400 x 400p </h2>
     <p>
-      One of the most challenging projects I have worked on for Art 74, and one of my first attempts with code. I created this project in Processing 3, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. Citypop music utilizes retro 80s Japanese pop, and fans of the genre in modern times create visuals to accompany the music with retro Japanese anime clips. The color scheme is reminiscent of the color palette used in Citypop visuals, and the visuals in this Processing sketch draw inspiration from late 90s anime Sailor Moon.The audience can interact with the sketch by hovering the cursor over the moon and dragging the cloud across the sketch. 
-      <a href="eportfolio/citypopcode.html">This is the code</a> 
+      A fun Processing sketch inspired by the sensations of drinking boba, or bubble tea. <br>
+      The audience can interact with the sketch by hovering the cursor over the cup to "stir the boba" and clap or make loud noises to make the straw jump.
+      <a href="./p5jscode.html">This is the code</a>
     </p>
 
-  
+
 
   </html>
