--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ img {
           <div class="gallery-item">
             <div class="image">
           <a target="_blank"
-            href="citypopescape.html">
-              <img src="images/codeasart.jpg" alt="citypop">
+            href="p5js.html">
+              <img src="images/p5js.jpg" alt="boba">
           </a>
             </div>
             </div>
