changed title and removed text

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ img {
 
 <body>
 <div class="header">
-  <h2>Artwork</h2>
-  <p> My work composed of animations and digital media pieces during my first year at San José State University and my time studying animation at De Anza College</p>
+  <h2>Gallery</h2>
 </div>
 <!-- portfolio grid -->
 
