--- a/artwork.html
+++ b/artwork.html
@@ -16,7 +16,7 @@ body {
   margin: auto;
   background: white;
   padding: 10px;
-} 
+}
 
 .glow {
   font-size: 40px;
@@ -30,7 +30,7 @@ body {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -46,7 +46,7 @@ body {
         <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
@@ -54,7 +54,7 @@ body {
 <style>
 * {
   box-sizing: border-box;
-} 
+}
 body{
   margin: 0;
   font-family: Arial;
@@ -87,7 +87,7 @@ body{
   <p> My work composed of animations, sketches, and digital media pieces from De Anza, Foothill, and San José State </p>
 </div>
 <!-- portfolio grid -->
-<div class="portfolio"> 
+<div class="portfolio">
   <div class="container">
       <div class="our-work">
         <div>
@@ -116,7 +116,7 @@ body{
          <div>
           <a href="tweet.html">
             <img src="images/tweet.gif" alt="tweet">
-          </a> 
+          </a>
         </div>
         <div>
            <a href="kanyequest.html">
