--- a/checkmate.html
+++ b/checkmate.html
@@ -44,7 +44,7 @@ img {
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
 
@@ -58,7 +58,7 @@ img {
 <h2>Year: 2022</h2>
 <p>
 A video game passion project reflecting my sense of humor. This project was my first time coding with javascript as the engine renpy utilizes that language. <br>
-I illustrated all the outfits on the chess piece characters and the background assets in Adobe Photoshop. 
+I illustrated all the outfits on the chess piece characters and the background assets in Adobe Photoshop.
 </p>
 
 
