--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+				<li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
 			</ul>
 		</div>
 
@@ -125,8 +125,8 @@ img {
           <div class="gallery-item">
             <div class="image">
           <a target="_blank"
-          href="cloudy.html">
-            <img src="images/cloudy404.jpg" alt="cloud404">
+          href="solarwing.html">
+            <img src="images/solarwing.jpg" alt="3dmodel">
           </a>
             </div>
             </div>
@@ -159,7 +159,7 @@ img {
             <div class="image">
           <a target="_blank"
            href="pastel.html">
-            <img src="images/Filipinwho.png" alt="pastel">
+            <img src="images/Filipinwho.png" alt="comic">
           </a>
 		        </div>
             </div>
