--- a/kanyequest.html
+++ b/kanyequest.html
@@ -18,7 +18,7 @@ img{
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -32,7 +32,7 @@ img{
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -46,7 +46,7 @@ img{
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
@@ -60,9 +60,9 @@ img{
 </iframe>
 
 
-    
+
     <p>
-    While I attended DeAnza College, I took three semesters to plan, draft and produce this short animation. The inspiration for this project literally came to me in a dream with a random yet strong plot that I strongly desired to visualize through animation. This “trailer” for an action-packed movie is 2D animated switching between using Adobe Animate and TvPaint, digitally drawn in Adobe Photoshop, utilized Adobe After Effects and pieced together using Adobe Premiere. I struggled finding animation software that ran smoothly on my Mac and could keep up with my PC, so I felt that the production of my project would have been more complete if I had the consistent working tools. 
+    While I attended DeAnza College, I took three semesters to plan, draft and produce this short animation. The inspiration for this project literally came to me in a dream with a random yet strong plot that I strongly desired to visualize through animation. This “trailer” for an action-packed movie is 2D animated switching between using Adobe Animate and TvPaint, digitally drawn in Adobe Photoshop, utilized Adobe After Effects and pieced together using Adobe Premiere. I struggled finding animation software that ran smoothly on my Mac and could keep up with my PC, so I felt that the production of my project would have been more complete if I had the consistent working tools.
 I wish more animation programs could run on mac, and were affordable! If my resources were consistent and reliable then this would be polished.
     </p>
 
