--- a/pastel.html
+++ b/pastel.html
@@ -15,7 +15,7 @@ img {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -29,7 +29,7 @@ img {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -43,7 +43,7 @@ img {
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
 
@@ -55,7 +55,7 @@ img {
 
 <h2>Dimensions:2160 × 1080px </h2>
 
-      
+
       <p>
 This comic is part of a collective I worked on to open the conversation on the experiences for BIPOC (Black, Indigenous, People of color). It encourages diversity and representation for BIPOC in all forms of media because in my childhood I consumed a lot of media and cartoons where I felt like I would be categorized as “other” or “supporting cast”. The dialogue for this comic was inspired by a personal experience that happened to me in elementary school. My 2nd grade class would hold a small “show-and-tell” event to celebrate cultural diversity and one day the Philippines was introduced. That day I learned about my cultural heritage and it invited me to contemplate more on my identity as an Asian American female and question why I never “saw” Filipinos or more diverse Asian representation in American media.
 
