--- a/3dmashup.html
+++ b/3dmashup.html
@@ -15,7 +15,7 @@ img {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -29,7 +29,7 @@ img {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -43,12 +43,12 @@ img {
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
   <!--end of Nav bar-->
-  
+
 <div class="sketchfab-embed-wrapper">
     <iframe title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/90062cb57edf4d9e99ef49bdd22271e0/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
@@ -63,10 +63,10 @@ img {
 <img src="images/3dmashup.png" alt="3dmashup">
 
 <p>
-Using free 3D models from Sketchfab, I created this 3D mashup scene in Maya and added color in Meshmixer. This scene is inspired by my late grandfather and the visual elements are inspired from a song associated with remembering loved ones who have passed. While the monochrome elements represent the unordinary and abstract, the colorful elements represent beauty and a short existence. The vibrancy of the flowers contrast the monochrome zebra and checkerboard, yet aesthetically compliment one another and create a balance suggesting both elements cannot exist without the other. 
+Using free 3D models from Sketchfab, I created this 3D mashup scene in Maya and added color in Meshmixer. This scene is inspired by my late grandfather and the visual elements are inspired from a song associated with remembering loved ones who have passed. While the monochrome elements represent the unordinary and abstract, the colorful elements represent beauty and a short existence. The vibrancy of the flowers contrast the monochrome zebra and checkerboard, yet aesthetically compliment one another and create a balance suggesting both elements cannot exist without the other.
 
 </p>
- 
+
 </div>
 
 </html>
