--- a/potions.html
+++ b/potions.html
@@ -6,7 +6,7 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-  
+
 img {
   float: right;
 }
@@ -16,7 +16,7 @@ img {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -30,7 +30,7 @@ img {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -44,7 +44,7 @@ img {
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
@@ -54,7 +54,7 @@ img {
 
 <h2> Title:DIY Potion</h2>
 <h2> Medium: Adobe Photoshop</h2>
-<h2> Dimensions: 1990 × 1740p </h2>    
+<h2> Dimensions: 1990 × 1740p </h2>
     <p>
        Visualization for a project in Art 3: This “DIY potion" requires the participant’s full use of imagination and curiosity. Early on in grade school I played too many video games, but little did I know that sparked my treasure sensing ability! I would pick up things that caught my eye and bring them home. Fast forward to last month when I was looking through my childhood storage and realized I collected glittery crayon shavings, unidentifiable garbage, and pieces of broken glass. However holding those ingredients in my hand reminded me of what I was thinking at the time and what I associated those objects with as a child. With that same energy, the participant can engage in this activity in almost any location, for instance if they’re walking home or in a forest. Gathering one of any element will meditate mindfulness of the present moment, and whatever element they gather naturally draws that person to choose it. Once the participant has their small brew, then they are invited to meditate on what they have collected and ask themselves open questions such as “what brought me to choosing this individual item?”, and after feeling any positive emotions: “why can’t I feel this way more often?”. Contemplation can last for as long as the participant desires to, and this potion for youth has no limits.
      </p>
