--- a/proj1.html
+++ b/proj1.html
@@ -13,7 +13,7 @@
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -27,7 +27,7 @@
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -41,7 +41,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
@@ -53,7 +53,7 @@
 <h2>Title: Rotten Pumpkin Website </h2>
 <h2>Medium: html5, css </h2>
 <h2>Year: 2019</h2>
-<p> 
+<p>
 In Art74 we learned the basics towards building websites! As a 3rd grader in elementary school before the start of social media, a friend introduced me to a website builder. I remember obsessively looking for ways to decorate my page using codes designated for myspace and embeding flash games to share with my friends. Using elements such as custom cursors and decorative sprite gifs inspired the aesthetic behind the website. Halloween was an upcoming holiday around the production of this website which is why it is Halloween themed, and creating a parody of the website Rotten Tomatoes inspired the purpose for Rotten Pumpkin! Users would rate their favorite Halloween-themed movies using the rating widget and are encouraged leave reviews.
 </p>
 
