changed links to storefront

--- a/tweet.html
+++ b/tweet.html
@@ -17,7 +17,7 @@ body {
   background: #f5f5f5;
   padding: 10px;
 }
-    
+
 .glow {
   font-size: 40px;
   color: #fff;
@@ -31,7 +31,7 @@ body {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
@@ -46,7 +46,7 @@ body {
         <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
-        <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
+        <li><a href="https://symartinez.carrd.co/"> Storefront</a></li>
       </ul>
     </div>
   </body>
@@ -56,9 +56,9 @@ body {
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/C-b8QKcszw8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  
+
 </iframe>
-    
+
 <p> Metamorphosis, 2/28/19, TVPaint
 I created this when I took my first animation class at De Anza. This was not my first experience with 2D animation, but it is a simple exercise that I am proud of. The instructor for my class passed two random subjects for us to “metamorphosize”. It is fun watching this animation on loop!
     </p>
