updated checkmate website

--- a/checkmate.html
+++ b/checkmate.html
@@ -58,7 +58,9 @@ img {
 <h2>Year: 2022</h2>
 <p>
 A video game passion project reflecting my sense of humor. This project was my first time coding with javascript as the engine renpy utilizes that language. <br>
-I illustrated all the outfits on the chess piece characters and the background assets in Adobe Photoshop.
+I illustrated all the outfits on the chess piece characters and the background assets in Adobe Photoshop. The demo is a work in progress that I wish to <br>
+bring to life one day.
+<br> You can download the demo to play the game at <a href ="https://symartinez21.itch.io/checkmate-the-dating-sim"> itch.io! </a>
 </p>
 
 
