--- a/p5js.html
+++ b/p5js.html
@@ -56,7 +56,8 @@ iframe {
     <h2> Dimensions: 400 x 400p </h2>
     <p>
       A fun Processing sketch inspired by the sensations of drinking boba, or bubble tea. <br>
-      The audience can interact with the sketch by hovering the cursor over the cup to "stir the boba" and clap or make loud noises to make the straw jump.
+      The audience can interact with the sketch by hovering the cursor over the cup to "stir the boba" <br>
+       and clap or make loud noises to make the straw jump.
       <a href="./p5jscode.html">This is the code</a>
     </p>
 
