--- a/solarwing.html
+++ b/solarwing.html
@@ -38,7 +38,7 @@ img {
 </style>
   </head>
   <body>
-<h1 class="glow">glitch art</h1>
+<h1 class="glow">solarwing</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
